[tool.poetry]
name = "janeway"
version = "1.3.10rc7"
description = "A journal management system designed for publishing scholarly articles."
authors = [
    "Martin Eve <martin.eve@bbk.ac.uk>",
    "Andy Byers <a.byers@bbk.ac.uk>",
    "Mauro Sanchez <m.sanchez@bbk.ac.uk>",
]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"

beautifulsoup4 = "~4.4.1"
boto = "~2.46.1"
bs4 = "~0.0.1"
colorlog = "~3.1.4"
chardet = "~3.0.4"
crossrefapi = "*"
Django = "~1.11.29"
django-bootstrap4 = { git = "https://github.com/GabrielUlici/django-bootstrap4", rev = "d230ec23d9f8f08c1505e0679ce0c6dba8090f0a" }
foundationform = { git = "https://github.com/BirkbeckCTP/django-foundation-form.git" }
django-hvad = "~1.8.0"
django-mailgun = { git = "https://github.com/BirkbeckCTP/django-mailgun.git", optional = true }
django-markdown-deux = "~1.0.5"
django-settings-export = "~1.2.1"
django-simple-math-captcha = { git = "https://github.com/BirkbeckCTP/django-simple-math-captcha", tag = "1.11_fix" }
django-recaptcha2 = "~1.0.3"
django-summernote = "~0.8.11.1"
djangorestframework = "~3.11.2"
dynamicsites = { git = "https://github.com/BirkbeckCTP/django-dynamicsites", rev = "f439c52" }
ebooklib = { git = "https://github.com/BirkbeckCTP/ebooklib", rev = "b7005c5" }
enum34 = { version = "~1.1.6", python = "<3.4" }
html2text = "~2017.10.4"
idna = "~2.7"
ipaddress = "~1.0.16"
jsmin = "~2.2.1"
kitchen = "~1.2.4"
libsass = "~0.11.1"
lxml = "~4.6.3"
markdown2 = "*"
mysqlclient = { version = "~1.3.12", optional = true }
pdfkit = "*"
Pillow = "~7.1.0"
psycopg2-binary = { version = "*", optional = true }
pyasn1 = "~0.1.9"
pycparser = "~2.14"
PyJWT = "~1.6.1"
python-crontab = "~2.2.3"
python-dateutil = "~2.6.0"
python-magic = "~0.4.13"
python-docx = "~0.8.6"
raven = { version = "~6.0.0", optional = true }
requests = "~2.25.1"
six = "~1.10.0"
sqlparse = "~0.2.3"
ua-parser = "~0.7.2"
user-agents = "~1.0.1"
django-materialize = { git = "https://github.com/BirkbeckCTP/django-materialize.git", rev = "bcfbfd9" }
django-hijack = "~2.1.10"
geoip2 = "~3.0.0" # Newer versions require python >= 3.6
maxminddb = "~1.5.4"

[tool.poetry.extras]

mysql = ["mysqlclient"]
postgresql = ["psycoppg2-binary"]
raven = ["raven"]
mailgun = ["django-mailgun"]

[tool.poetry.dev-dependencies]

django-debug-toolbar = "~1.11.1"
mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
